--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 #设置日志的级别，定义日志信息的输出目的 console
-log4j.rootCategory=INFO,console
+log4j.rootCategory=WARN,console
 #定义输出目的地为控制台
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 #设定日志记录的最低级别为ERROR
